# starloom

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  README.rst  get_context.sh  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  julian_day.txt  logging.md  lunar_nodes.md  make.bat  usage.rst  weft_format2.txt
docs/cursor/: TODO.md  lessons.md  scratchpad.md
docs/horizons/: horizons.html  horizons.txt  manual.html  manual.txt
docs/plans/: 2025-10-28-lunar-nodes-weftball-design.md  2025-10-28-lunar-nodes-weftball-implementation.md
knowledge/: mars.csv  timezones.txt
knowledge/inanna/: venus_inanna_20250413_20261003.csv
knowledge/retrogrades/: jupiter.csv  mars.csv  mercury.csv  pluto.csv  saturn.csv  venus.csv
knowledge/sun/: decans.csv
knowledge/transits/jupiter/: saturn_2025-2030.csv
scripts/: convert_retrogrades_to_png.py  generate_fixtures.py  make_all_retrogrades.py  make_weftball.py  upload_retrograde_images.py
src/knowledge/retrogrades/: mars.csv
src/starloom/: __init__.py  cli.py  constants.py  planet.py  profile.py
src/starloom_2025/: cli.py
tests/: __init__.py  test_starloom.py  test_starloom_2025.py
tests/cached_horizons/: __init__.py  test_cached_ephemeris.py
tests/cli/: test_horizons.py  test_retrograde.py  test_transits.py
tests/ephemeris/: test_time_spec.py
tests/horizons/: __init__.py  test_elements_parser.py  test_ephemeris.py  test_integration.py  test_observer_parser.py  test_orbital_elements_ephemeris.py  test_orbital_elements_parser.py  test_quantities.py  test_request.py
tests/integration/: test_lunar_node_weftball.py
tests/local_horizons/: __init__.py  test_local_ephemeris.py  test_storage.py
tests/parsers/: test_observer_parser.py  test_orbital_elements_parser.py
tests/planet/: test_planet_enum.py
tests/retrograde/: __init__.py  test_finder.py
tests/space_time/: test_julian.py  test_julian_calc.py  test_pythonic_datetimes.py  test_rounding.py  test_sidereal.py
tests/transits/: test_finder.py
tests/weft/: test_block_selection.py  test_block_selection_edge_cases.py  test_ephemeris_data_source.py  test_ephemeris_weft_generator.py  test_timespan.py  test_weft_blocks.py  test_weft_edge_cases.py  test_weft_reader.py  test_weft_writer.py
tests/weft_ephemeris/: test_ephemeris.py
(+122 files in other folders)
