[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starloom_2025"
version = "0.1.0"
description = "Tool for working with Horizons and Weft ephhemeris data"
readme = "README.rst"
authors = [
  {name = "Jes Wolfe", email = "jes5199@gmail.com"}
]
maintainers = [
  {name = "Jes Wolfe", email = "jes5199@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/jes5199/starloom_2025/issues"
changelog = "https://github.com/jes5199/starloom_2025/blob/master/changelog.md"
homepage = "https://github.com/jes5199/starloom_2025"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

